fixes #55, collapsed and expand function for front page.

--- a/public/css/other.css
+++ b/public/css/other.css
@@ -12,7 +12,7 @@ a {
 	text-decoration: none;
 }
 a:hover {
-	color: #aaa;
+	color: #362A1C;
 }
 
 h1,h2,h3,h4,h5,h6 {
